# ctc

./: .cta.json  .gitignore  LICENSE  package.json
docs/: project-structure.md  surreal-setup.md
messages/: id.json
sage/: .env.example  main.py  pyproject.toml  setup.surql
sage/foundation/: config.py  database.py  logging.py  security.py
sage/integrations/: opik_client.py
sage/research/: simple_graph.py  syllabus.md  syllabus_drafter.py
server/: app.ts
server/foundation/: auth.ts  logger.ts
server/foundation/db/: index.ts
server/foundation/keys/: env.ts
server/routes/: demo.ts  todos.ts
src/: routeTree.gen.ts  router.tsx
src/components/: Header.tsx
src/routes/: __root.tsx
src/routes/api/: $.tsx
src/routes/demo/: start.api-request.tsx  tanstack-query.tsx
src/utils/: client.ts
